# autoresearch

./: .gitignore  README.md  ROADMAP.md  WINDOWS_CPU_POC_ALIGNMENT.md  benchmark_compare.py  compare_agents.py  deploy_cpu_agent.py  environment.yml  prepare.py  program.md  provider_benchmark.example.json  provider_benchmark.local_research.json  provider_benchmark.py  pyproject.toml  ternary_lab.py  train.py
comparison_reports/: demo_gpu_dense.json
scripts/: bitnet_local_stub.py  bootstrap_bitnet_research.sh  git_agent.py  loop_report.py  loop_status.py  roadmap_doctor.py  run_agent_experiment.py  supervised_local_run.py
tests/: test_benchmark_compare.py  test_bitnet_cpu_poc.py  test_compare_agents.py  test_deploy_cpu_agent.py  test_git_agent.py  test_loop_status.py  test_provider_benchmark.py  test_run_agent_experiment.py  test_ternary_lab.py
